is it really the hex value

--- a/src/App.css
+++ b/src/App.css
@@ -15,5 +15,6 @@
 }
 
 .container {
-  background-image: url('https://implodingduck.github.io/hexnumble/hexagon.svg')
+  background-image: url("https://implodingduck.github.io/hexnumble/hexagon.svg");
+  background-position: center;
 }
