adding how to play

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ html body {
   background-color: #515151;
   color: #fcfcfc;
 }
-div.modal-content p {
+div.modal-content {
   color: #333333;
 }
 .container {
